force-app/main/default/objects/TriggerSettings__c/fields/Card_Payment_History_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Card_Payment_History_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Card Payment History Trigger</label>
    <type>Checkbox</type>
</CustomField>