force-app/main/default/objects/TriggerSettings__c/fields/Card_Payment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Card_Payment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Payment Trigger</label>
    <type>Checkbox</type>
</CustomField>