force-app/main/default/objects/TriggerSettings__c/fields/Direct_Debit_History_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_History_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Direct Debit History Trigger</label>
    <type>Checkbox</type>
</CustomField>