force-app/main/default/objects/TriggerSettings__c/fields/Payment_Schedule_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Payment Schedule Trigger</label>
    <type>Checkbox</type>
</CustomField>